Something with html in it

--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-# Hey mate, how is it going?
+<!DOCTYPE html>  
+<html>
+	<Head>
+		<title>jubeorMk1 at Github</title>
+	</Head>
+	<body>
+		<h1>This is jubeormk1 simple github.io main page</h1>
+		<p>and the only one for now.</p>
+		<h2>BIO</h2>
+		<p>I am a quite unbusy engineer checking out what is this thing called Github. Working in good coding habits and developing some software for uControllers. I live in a cloud as much of us do now and my mother languages are simple C and Spanish.</p>
+		<br>
+		<h2>Projects</h2>
+		<p>I am working in some projects on arm cortex devices. Most of them are secret and out of sight. You will be welcome to see what is going on as soon as I have something public to share.</p>
+		<p>You can check my evident Github site <a href="https://github.com/jubeormk1" title="Warning! It may contains some code.">Github site</a>.</p>
+		
+	</body>
+</html>
