There is always a typo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<br>
 		<h2>Projects</h2>
 		<p>I am working in some projects on arm cortex devices. Most of them are secret and out of sight. You will be welcome to see what is going on as soon as I have something public to share.</p>
-		<p>You can check my evident Github site <a href="https://github.com/jubeormk1" title="Warning! It may contains some code.">Github site</a>.</p>
+		<p>You can check my evident <a href="https://github.com/jubeormk1" title="Warning! It may contains some code.">Github site</a>.</p>
 		
 	</body>
 </html>
