Added a comment on the posible PCB contents of the repositories.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 		<p>and the only one for now.</p>
 		<h2>BIO</h2>
 		<p>I am a quite unbusy engineer checking out what is this thing called Github. Working in good coding habits and developing some software for uControllers. I live in a cloud as much of us do now and my mother languages are simple C and Spanish.</p>
-		<br>
 		<h2>Projects</h2>
 		<p>I am working in some projects on arm cortex devices. Most of them are secret and out of sight. You will be welcome to see what is going on as soon as I have something public to share.</p>
 		<p>You can check my evident <a href="https://github.com/jubeormk1" title="Warning! It may contains some code.">Github site</a>.</p>
-		
+		<p>I like working on all kinds of things so you may find some PCBs design repositories too.</p>
+		<p>If you find something useful please feel free to have it. If you think something can be better, and I am 102% sure about that, you are welcome to open an issue. That is all I have for you today, Have a nice day!</p>
 	</body>
 </html>
